--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,9 +7,9 @@ android {
         applicationId "net.exitmatrix.fragegott"
         minSdkVersion 11
         targetSdkVersion 25
-        versionName '5'
+        versionName '6'
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        versionCode 5
+        versionCode 6
     }
     buildTypes {
         release {
@@ -29,4 +29,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:25.1.1'
     compile 'com.android.support:support-v4:25.1.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.google.android.gms:play-services-appindexing:9.8.0'
 }
