--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,11 +15,12 @@
             android:configChanges = "orientation|screenSize|screenLayout"            >
             <intent-filter  android:label="FrageGott.de">
                 <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
-                <data android:host="exitmatrix.net" android:scheme="http" />
+                <category android:name="android.intent.category.LAUNCHER" /><!--
+                <data android:host="jesus-comes.com" android:scheme="http" />
+                -->
             </intent-filter>
         </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
      App Indexing.  See https://g.co/AppIndexing/AndroidStudio for more information. -->
