--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,12 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="net.exitmatrix.fragegott">
 
+    <uses-sdk
+        android:minSdkVersion="17"
+        android:targetSdkVersion="17" />
+
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -12,14 +17,17 @@
         android:theme="@style/splashScreenTheme">
         <activity
             android:name=".MainActivity"
-            android:configChanges = "orientation|screenSize|screenLayout"            >
-            <intent-filter  android:label="frage Gott">
+            android:configChanges = "orientation|screenSize|screenLayout"  >
+            <intent-filter android:label="frage Gott">
+                <!--<data
+                android:scheme="http"
+                android:host="jesus-comes.com"
+                android:pathPrefix="/index.php/my-rhema/"/>-->
                 <action android:name="android.intent.action.MAIN" />
                 <action android:name="android.intent.action.VIEW" />
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.LAUNCHER" /><!--
-                <data android:host="jesus-comes.com" android:scheme="http" />
                 -->
             </intent-filter>
         </activity><!-- ATTENTION: This was auto-generated to add Google Play services to your project for
